public/css/Component/Customer/Customer_History_Top.css
.Customer_History_Top {
    .main-right {
        display: grid;
        width: 100%;
        height: 100%;
        grid-template-rows: 24% 76%;
        overflow: hidden;
    }

    .main-right-top {
        display: flex;
        flex-direction: column;
    }

    .main-right-top-one {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        height: 70px;
        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    }

    .main-right-top-one-search {
        display: flex;
        align-items: center;
    }

    .main-right-top-one img {
        margin-left: 30px;
        margin-right: 14px;
        width: 22px;
        height: 22px;
    }

    .main-right-top-one input {
        width: 375px;
        height: 24px;
        border-radius: 3px;
        border: 1px solid #7f8c8d;
        padding-left: 10px;
    }

    .main-right-top-one-content {

        display: flex;
        flex-direction: row;
        align-items: center;

    }

    .main-right-top-one-content p {
        font-size: 18px;
        font-family: inter;
        letter-spacing: 0.1px;

    }

    .main-right-top-one-content img {
        width: 55px;
        height: 55px;
        margin-left: 30px;
        border-radius: 50%;
    }

    .main-right-top-two {
        height: 50px;
        display: flex;
        align-items: center;
        padding-left: 33px;
    }

    .main-right-top-two h1 {
        font-size: 22px;
    }

    .main-right-top-three {
        display: flex;
        flex-direction: row;
        padding-left: 38px;
        padding-top: 9px;
        padding-bottom: 11px;
        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);

    }

    .main-right-top-three-content {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        margin-right: 30px;
        cursor: pointer;
    }

    .main-right-top-three-content p {
        font-size: 17px;
        padding-bottom: 5px;
    }


    .line {
        width: 93px;
        height: 3px;
        background-color: #1B6652;
    }

    .line1 {
        width: 93px;
        height: 3px;
        background-color: none;
    }

    @media screen and (max-width: 1118px) {
        .main-right-top-one-content {
            width: 250px;
            margin-left: 1%;

        }

        .table td {

            font-size: 12px;

        }

        .table-header {
            font-size: 14px;
        }

        .table-row img {
            width: 20px;
            height: 20px;

        }

    }

    @media screen and (max-width:862px) {
        .main-right-top-one-content {
            width: 250px;
            margin-left: 0;
            padding-left: 5%;
        }

        .main-right-top-one input {
            width: 20%;

        }

        .main-right-top-three-content p {
            font-size: 14px;

        }


        .line {
            width: 86px;
            height: 2px;

        }

        .table td {

            font-size: 10px;

        }

        .table-header {
            font-size: 12px;
        }

        .table-row img {
            width: 17px;
            height: 17px;

        }
    }

    @media screen and (max-width: 692px) {


        .table td {

            font-size: 9px;

        }

        .table-header {
            font-size: 10px;
        }

        .table-row img {
            width: 15px;
            height: 15px;

        }

    }
}

